
PIG-3148: OutOfMemory exception while spilling stale DefaultDataBag. Extra option to gc() before spilling large bag. (knoguchi via rohini)

PIG-3216: Groovy UDFs documentation has minor typos (herberts via rohini)

PIG-3202: CUBE operator not documented in user docs (prasanth_j via billgraham)

OPTIMIZATIONS

BUG FIXES

PIG-3144: Erroneous map entry alias resolution leading to "Duplicate schema alias" errors (jcoveney via cheolsoo)

PIGG-3212: Race Conditions in POSort and (Internal)SortedBag during Proactive Spill (kadeng via dvryaboy)

PIG-3206: HBaseStorage does not work with Oozie pig action and secure HBase (rohini)


Release 0.11.0

INCOMPATIBLE CHANGES

PIG-3034: Remove Penny code from Pig repository (gates via cheolsoo)

PIG-2931: $ signs in the replacement string make parameter substitution fail (cheolsoo via jcoveney)

PIG-1891 Enable StoreFunc to make intelligent decision based on job success or failure (initialcontext via gates)

IMPROVEMENTS

PIG-3044: Trigger POPartialAgg compaction under GC pressure (dvryaboy)

PIG-2907: Publish pig jars for Hadoop2/23 to maven (rohini)

PIG-2934: HBaseStorage filter optimizations (billgraham)

PIG-2980: documentation for DateTime datatype (zjshen via thejas)

PIG-2982: add unit tests for DateTime type that test setting timezone (zjshen via thejas)

PIG-2937: generated field in nested foreach does not inherit the variable name as the field name (jcoveney)

PIG-3019: Need a target in build.xml for source releases (gates)

PIG-2832: org.apache.pig.pigunit.pig.PigServer does not initialize udf.import.list of PigContext (prkommireddi via rohini)

PIG-2898: Parallel execution of e2e tests (iveselovsky via rohini)

PIG-2913: org.apache.pig.test.TestPigServerWithMacros fails sometimes because it picks up previous minicluster configuration file (cheolsoo via julien)

PIG-2976: Reduce HBaseStorage logging (billgraham)

PIG-2947: Documentation for Rank operator (xalan via azaroth)
